<resources>

    <string name="app_name">MusicPlayer</string>
    <string name="menu_quit">退出</string>
    <string name="menu_chang_dir">更改音乐文件夹</string>
    <string name="title_activity_mp3_list">Mp3ListActivity</string>
    <string name="mp3list_update">update the list</string>
    <string name="mp3list_about">关于</string>
	<string name="no_file">没有找到文件</string>
    <!-- Header -->
    <string name="list">List</string>
    <string name="logo">Logo</string>
    <string name="settings">Settings</string>

    <!-- Now Playing -->
    <string name="check_button">Check for MP3s</string>
    <string name="album_art">Album Art</string>
    <string name="track">Track Name</string>
    <string name="artist">Artist</string>
    <string name="duration">0.00</string>

    <!-- Now Playing Footer -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <!-- Settings -->
    <string name="playback">Playback Settings</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="library">Library</string>
    <string name="sync_library">Sync Library</string>
    <string name="media_path">Root/Current_Folder</string>
    <string name="edit_dir">Edit Dir</string>
    <string name="dirchooser_label">选择本地的音乐文件夹</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="title_activity_player">PlayerActivity</string>
    
    <string name="addMusicDir">选择本地音乐目录</string>
    <string name="tableTilte1">歌曲</string>
    <string name="tableTilte2">歌词</string>

</resources>