<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/now_playing"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <ImageView
         android:id="@+id/albumArt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/album_art"
         android:scaleType="centerCrop"
         android:src="@drawable/blank_album_art"
         android:visibility="visible" />
     
     <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/trans_bg"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="10dp" 
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
       >

        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:textColor="#FFF"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:singleLine="true"
            android:text="@string/track"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible" />

        <TextView
            android:id="@+id/trackArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:textColor="#FFF"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/artist"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />
         <TextView
		        android:id="@+id/trackDuration"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:layout_marginRight="15dp"
		        android:shadowColor="#000"
		        android:textColor="#FFF"
		        android:shadowDx="0"
		        android:shadowDy="0"
		        android:shadowRadius="5"
		        android:text="@string/duration"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:visibility="visible" />


    </LinearLayout>
         
    


</RelativeLayout>