<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:background="@drawable/secondary_title_background"
                   android:padding="5dp"
                  	>

        <ImageView
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:contentDescription="@string/delete"
            android:gravity="center_vertical"
            android:src="@drawable/path_up_level"
            android:layout_marginRight="5dp" />

      	<LinearLayout
                android:id="@+id/current_path_pane"
                android:background="@drawable/path_pane_bg"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp">
					<TextView
		                android:id="@+id/currDirLabel"
		                android:layout_height="fill_parent"
		                android:layout_width="wrap_content"
		                android:gravity="center_vertical"
		                android:textSize="18sp"
		                android:text="@string/media_path"
		                android:singleLine="true"
		                android:ellipsize="start"
		                android:paddingLeft="10dip"
		                style="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        

        <ImageView
                android:id="@+id/choose_dir"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@android:drawable/ic_menu_save"
                android:contentDescription="@string/save"
                android:gravity="center_vertical"
                android:padding="5dp" 
               />
        
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
           <LinearLayout
            android:id="@+id/empty_chooser_view"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:gravity="center"> 		
            <TextView
                android:drawableTop="@drawable/empty_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_file"
                android:textSize="15sp"
                android:singleLine="true" />
       	 </LinearLayout>
         <ListView
            android:id="@+id/dirList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false"
            android:paddingBottom="0sp" >
    	</ListView>
    </FrameLayout>
   

</LinearLayout>